# buddy-mlir

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/BuddyLlama/: CMakeLists.txt  import-llama2.py  llama-main.cpp  test_text_container.cpp
examples/BuddyLlamaKVCache/: import-llama2.py  model.py
examples/BuddyWhisper/: import-whisper.py  whisper-generate-forward.py
examples/ConvOpt/: CMakeLists.txt  arith_add.cpp  edge-detection.cpp
examples/MLIRPython/: arith_add.cpp  arith_add.py  batched_matmul.py  broadcast_add.py  create_new_mlir_opeartion.py  gelu.py  getitem.py  iadd.py  matmul.py  ones.py  softmax.py  transformer_cpu.py  transformer_op_set.txt  transformer_operators.txt  transpose.py  two_arith_add.py  two_operations.py
examples/MLIRPython/buddy/: compiler.py  operators_gen.py
frontend/: CMakeLists.txt
frontend/Interfaces/buddy/Core/: Container.h  ContainerPythonBind.cpp  testPythonBinding.py
frontend/Interfaces/buddy/DIP/: ImageContainer.h
frontend/Interfaces/buddy/LLM/: TextContainer.h
frontend/Python/: frontend.py
frontend/Python/graph/: graph.py  operation.py
frontend/Python/ops/: linalg.py  math.py  tensor.py  tosa.py
tests/Python/: test_index.py  test_max_pool2d.py  test_mean.py  test_reciprocal.py  test_rsqrt.py  test_slice.py  test_split_with_sizes.py  test_sqrt.py
